# syndicationd

./: .cliffignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRDPARTY.toml  backup.json  categories.toml  cliff.toml  clippy.toml  codecov.yaml  dist-workspace.toml  flake.nix  index.html  insta.yaml  justfile  oranda-workspace.json  rust-toolchain.toml  taplo.toml  typos.toml
crates/ebpf/synd_ebpf/: Cargo.toml
crates/ebpf/synd_ebpf_common/: Cargo.toml
crates/ebpf/synd_ebpf_task/: Cargo.toml
crates/ebpf/synd_ebpf_task/src/: main.rs
crates/synd_api/: CHANGELOG.md  Cargo.toml  README.md  justfile  oranda.json
crates/synd_api/.sqlx/: query-701bf3d0f08124c67f91e5ab4c40c7f3a2a4111ad46743935dde4b935446aa30.json  query-ba7e6e8f94ead29f62a96052cd6881c1faac81affe3a9589ec276a1f20796dc0.json  query-be0f9bced44b627f05b342e588da741cfd759c91e9f244f86cee64502aaef35d.json  query-be339f199b95834aff76adc3bbe1c9ae0241c8f50488cb48c0594aecbcfc2105.json
crates/synd_api/migrations/: 0001_subscribed_feed.sql
crates/synd_api/src/: args.rs  cli.rs  config.rs  dependency.rs  lib.rs  main.rs  monitor.rs  principal.rs  shutdown.rs
crates/synd_api/src/gql/: mod.rs  query.rs  scalar.rs
crates/synd_api/src/persistence/: memory.rs
crates/synd_api/src/repository/: datastore.rs  kvsd.rs  memory.rs  mod.rs  subscription.rs  types.rs
crates/synd_api/src/serve/: auth.rs  mod.rs  probe.rs
crates/synd_api/src/snapshots/: synd_api__args__tests__should_parse.snap  synd_api__monitor__tests__emit_metrics.snap
crates/synd_api/src/usecase/: fetch_entries.rs  fetch_subscribed_feeds.rs  mod.rs  subscribe_feed.rs  unsubscribe_feed.rs
crates/synd_api/tests/: integration.rs
crates/synd_auth/: CHANGELOG.md  Cargo.toml  README.md  justfile
crates/synd_auth/src/: config.rs  lib.rs
crates/synd_auth/src/device_flow/: github.rs  google.rs  mod.rs
crates/synd_auth/src/jwt/: google.rs
crates/synd_authn/: CHANGELOG.md  Cargo.toml
crates/synd_authn/src/device_flow/: github.rs  mod.rs
crates/synd_ebpf/: Cargo.toml  rust-toolchain.toml
crates/synd_ebpf/.cargo/: config.toml
crates/synd_feed/: CHANGELOG.md  Cargo.toml  README.md  justfile
crates/synd_feed/src/: lib.rs  types.rs
crates/synd_feed/src/feed/: cache.rs  mod.rs  parser.rs  service.rs
crates/synd_feed/src/types/: category.rs  feed_type.rs  macros.rs  mod.rs  requirement.rs  url.rs
crates/synd_kvs/: Cargo.toml  justfile
crates/synd_kvs/src/: lib.rs
crates/synd_kvs/src/config/: mod.rs
crates/synd_kvs/src/kvsd/: cli.rs  mod.rs
crates/synd_kvsd/: Cargo.toml  README.md  justfile
crates/synd_kvsd/src/: args.rs  lib.rs  main.rs
crates/synd_kvsd/src/authn/: credential.rs  mod.rs
crates/synd_kvsd/src/boot/: mod.rs  provision.rs
crates/synd_kvsd/src/config/: file.rs  mod.rs  resolver.rs
crates/synd_kvsd/src/kvsd/: mod.rs
crates/synd_kvsd/src/middleware/: dispatcher.rs  mod.rs  stack.rs  telemetry.rs
crates/synd_kvsd/src/server/: handler.rs  listener.rs  mod.rs
crates/synd_kvsd/src/table/: entry.rs  index.rs  mod.rs  namespace.rs  table.rs
crates/synd_kvsd/src/types/: mod.rs  namespace.rs  time.rs
crates/synd_kvsd/src/uow/: authenticate.rs  channel.rs  delete.rs  get.rs  mod.rs  ping.rs  set.rs
crates/synd_kvsd_protocol/: Cargo.toml
crates/synd_kvsd_protocol/src/: connection.rs  keyvalue.rs  lib.rs
crates/synd_kvsd_protocol/src/message/: authenticate.rs  cursor.rs  frame.rs  ioext.rs  mod.rs  parse.rs  spec.rs
crates/synd_o11y/: CHANGELOG.md  Cargo.toml  README.md  justfile
crates/synd_o11y/src/: health_check.rs  lib.rs
crates/synd_o11y/src/opentelemetry/: guard.rs  mod.rs  propagation.rs  resource.rs
crates/synd_o11y/src/tracing_subscriber/: initializer.rs  mod.rs
crates/synd_perf/: Cargo.toml
crates/synd_perf/src/: main.rs
crates/synd_stdx/: CHANGELOG.md  Cargo.toml  justfile
crates/synd_stdx/src/: lib.rs
crates/synd_stdx/src/byte/: mod.rs
crates/synd_stdx/src/color/: support.rs
crates/synd_stdx/src/conf/: mod.rs
crates/synd_stdx/src/fs/: fsimpl.rs  mod.rs
crates/synd_stdx/src/time/: mod.rs
crates/synd_term/: CHANGELOG.md  Cargo.toml  categories.toml  justfile  oranda.json
crates/synd_term/benches/: render.rs
crates/synd_term/benches/bench/: helper.rs
crates/synd_term/gql/: mutation.gql  query.gql  schema.json
crates/synd_term/gql/github/: issue_query.gql  pull_request_query.gql  schema.json
crates/synd_term/proptest-regressions/application/: direction.txt
crates/synd_term/src/: command.rs  config.rs  filesystem.rs  integration.rs  job.rs  lib.rs  main.rs  matcher.rs
crates/synd_term/src/application/: app_config.rs  authenticator.rs  builder.rs  clock.rs  direction.rs  flags.rs  in_flight.rs  input_parser.rs  mod.rs  state.rs
crates/synd_term/src/auth/: authenticator.rs  (+3 more)
crates/synd_term/tests/: integration.rs
crates/synd_test/: Cargo.toml
crates/synd_test/src/: jwt.rs  kvsd.rs  lib.rs  mock.rs  oauth.rs
synd/: Cargo.toml
synd/src/: lib.rs  types.rs
synd/src/feed/: parser.rs
syndapi/: Cargo.toml
syndapi/src/: config.rs  dependency.rs  lib.rs  main.rs  principal.rs  serve.rs
syndapi/src/gql/: mod.rs  mutation.rs  object.rs  query.rs  scalar.rs
syndapi/src/persistence/: datastore.rs  kvsd.rs  memory.rs  mod.rs
syndapi/src/serve/: auth.rs  mod.rs
syndapi/src/usecase/: authorize.rs  fetch_entries.rs  fetch_subscribed_feeds.rs  mod.rs  subscribe_feed.rs
syndterm/: Cargo.toml
syndterm/gql/: mutation.gql  query.gql  schema.json
syndterm/src/: application.rs  args.rs  command.rs  config.rs  job.rs  lib.rs  main.rs  terminal.rs  types.rs
syndterm/src/application/: direction.rs  mod.rs
syndterm/src/auth/: device_flow.rs  github.rs  mod.rs
syndterm/src/cli/: clear.rs  mod.rs
syndterm/src/client/: mod.rs  mutation.rs  payload.rs  query.rs
syndterm/src/terminal/: backend.rs
syndterm/src/types/: mod.rs  page_info.rs
syndterm/src/ui/: entries.rs  extension.rs  login.rs  mod.rs  prompt.rs  subscription.rs  tabs.rs  theme.rs
syndterm/tests/: integration.rs
syndterm/tests/test/: helper.rs
(+397 files in other folders)
