[workspace]
members  = ["crates/synd_*"]
resolver = "2"

[workspace.package]
authors     = ["ymgyt"]
categories  = ["command-line-utilities"]
description = "terminal feed viewer"
edition     = "2021"
homepage    = "https://docs.syndicationd.ymgyt.io/synd-term/"
keywords    = ["feed", "rss", "atom", "tui"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/ymgyt/syndicationd"

[workspace.dependencies]
anyhow         = { version = "1", default-features = false, features = ["std"] }
assert_cmd     = { version = "2.0.16" }
async-graphql  = { version = "7.0" }
async-trait    = { version = "0.1.83", default-features = false }
axum           = { version = "0.7.7", default-features = false }
axum-server    = { version = "0.6.0", features = ["tls-rustls"] }
bitflags       = { version = "2.6.0", default-features = false }
bytes          = { version = "1.7.2" }
chrono         = { version = "0.4.38", default-features = false }
clap           = { version = "4.5", default-features = false }
criterion      = { version = "0.5.1", features = ["async_tokio"] }
either         = { version = "1.13.0" }
fake           = { version = "2.10.0", features = ["derive", "chrono"] }
fdlimit        = { version = "0.3.0", default-features = false }
feed-rs        = { version = "1.5", default-features = false }
futures-util   = { version = "0.3.30", default-features = false }
graphql_client = { version = "0.13.0", default-features = false }
headers        = { version = "0.4.0" }
http           = { version = "1.1" }
insta          = { version = "1.40" }
itertools      = { version = "0.13", default-features = false, features = ["use_std"] }
jsonwebtoken   = { version = "9.3.0" }
kvsd           = { version = "0.1.3", default-features = false }
mockall        = { version = "0.13.0" }
moka           = { version = "0.12.8", features = ["future"] }
octocrab       = { version = "0.38.0", features = ["rustls-webpki-tokio"] }
once_cell      = { version = "1.20.1" }
pprof          = { version = "0.13", features = ["flamegraph", "criterion"] }
proptest       = { version = "1.5.0" }
rand           = { version = "0.8.5" }
reqwest        = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
schemars       = { version = "0.8.21", default-features = false, features = ["derive"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1.0.128" }
tempfile       = { version = "3" }
thiserror      = { version = "1.0.64" }
# opentelemetry specifies `~1.38` to tokio
# https://github.com/open-telemetry/opentelemetry-rust/blob/66f29b876f4c5d0c1551c65e6d92d1ae2e6ea744/Cargo.toml#L45
# after the 0.25 release, this restriction was removed
# https://github.com/open-telemetry/opentelemetry-rust/pull/2095
# however, it has noe been released yet.
# when upgrading opentelemetry from 0.25 we will be able to specify the latest version of tokio
tokio              = { version = "~1.38", default-features = false }
tokio-util         = { version = "0.7.12" }
toml               = { version = "0.8.19" }
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["smallvec", "fmt", "ansi", "std", "env-filter", "time"], default-features = false }
url                = { version = "2.5.2" }

[profile.bench]
# To enable framegraph
debug = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]

# cargo
cargo_common_metadata   = "warn"
multiple_crate_versions = "allow"
negative_feature_names  = "warn"
redundant_feature_names = "warn"
wildcard_dependencies   = "warn"

# pedantic
pedantic = { level = "warn", priority = -1 }

missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"

[workspace.metadata.crane]
# Required in crane buildDepsOnly derivation
name = "synd"

[workspace.metadata.release]
allow-branch = ["main"]

# Config for 'cargo dist'
[workspace.metadata.dist]
allow-dirty = ["ci"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "ymgyt/homebrew-syndicationd"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew", "npm"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@syndicationd"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"
