[workspace]
members  = ["crates/synd_*"]
resolver = "2"

[workspace.package]
authors     = ["ymgyt"]
categories  = ["command-line-utilities"]
description = "terminal feed viewer"
edition     = "2024"
homepage    = "https://docs.syndicationd.ymgyt.io/synd-term/"
keywords    = ["feed", "rss", "atom", "tui"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/ymgyt/syndicationd"

[workspace.dependencies]
anyhow             = { version = "1", default-features = false, features = ["std"] }
assert_cmd         = { version = "2.0.17" }
async-graphql      = { version = "7.0.16" }
async-trait        = { version = "0.1.88", default-features = false }
axum               = { version = "0.8.4", default-features = false }
axum-server        = { version = "0.6.0", features = ["tls-rustls"] }
bitflags           = { version = "2.9.1", default-features = false }
bytes              = { version = "1.10.0" }
chrono             = { version = "0.4.41", default-features = false }
clap               = { version = "4.5", default-features = false }
criterion          = { version = "0.5.1", features = ["async_tokio"] }
either             = { version = "1.15.0" }
fake               = { version = "4.3.0", features = ["derive", "chrono"] }
fdlimit            = { version = "0.3.0", default-features = false }
feed-rs            = { version = "1.5", default-features = false }
futures            = { version = "0.3.31" }
futures-util       = { version = "0.3.31", default-features = false }
graphql_client     = { version = "0.13.0", default-features = false }
headers            = { version = "0.4.0" }
http               = { version = "1.1" }
insta              = { version = "1.43" }
itertools          = { version = "0.13", default-features = false, features = ["use_std"] }
jsonwebtoken       = { version = "9.3.0" }
kvsd               = { version = "0.1.3", default-features = false }
mockall            = { version = "0.13.1" }
moka               = { version = "0.12.10", features = ["future"] }
nom                = { version = "8.0.0", default-features = false, features = ["std"] }
octocrab           = { version = "0.38.0", features = ["rustls-webpki-tokio"] }
pprof              = { version = "0.14", features = ["flamegraph", "criterion"] }
proptest           = { version = "1.6.0" }
rand               = { version = "0.9.1" }
reqwest            = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
schemars           = { version = "0.8.21", default-features = false, features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1.0.136" }
tempfile           = { version = "3" }
thiserror          = { version = "2.0.12" }
tokio              = { version = "1.45.1", default-features = false }
tokio-util         = { version = "0.7.15" }
toml               = { version = "0.8.22" }
tracing            = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["smallvec", "fmt", "ansi", "std", "env-filter", "time"], default-features = false }
url                = { version = "2.5.4" }

[profile.release]
panic = "abort"

[profile.bench]
# To enable framegraph
debug = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]

# cargo
cargo_common_metadata   = "warn"
multiple_crate_versions = "allow"
negative_feature_names  = "warn"
redundant_feature_names = "warn"
wildcard_dependencies   = "warn"

# pedantic
pedantic = { level = "warn", priority = -1 }

missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"

[workspace.metadata.crane]
# Required in crane buildDepsOnly derivation
name = "synd"

[workspace.metadata.release]
allow-branch = ["main"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"
