[package]
name = "synd"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
feed-rs = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
thiserror = "1.0.56"
tokio = { workspace = true }
