[package]
name = "synd"
version = "0.1.0"
description = "Library to handle syndication spec"
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
feed-rs = { workspace = true }
futures-util = { workspace = true }
moka = { workspace = true, features = ["future"] }
reqwest = { workspace = true, features = ["stream"] }
thiserror = "1.0.56"
tokio = { workspace = true }
tracing = { workspace = true }
