[package]
name = "syndapi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
# To use axum 0.7
async-graphql = { version = "7.0",  features = ["tracing"] }
async-graphql-axum = { version = "7.0" }
async-trait = { workspace = true }
# TODO configure features
axum = { version = "0.7.3" }
clap = { workspace = true, features = ["derive"] }
either = "1.9.0"
graphql_client = { workspace = true }
kvsd = { version = "0.1.2" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.111"
synd = { path = "../synd" }
thiserror = "1.0.56"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
