[package]
name = "syndterm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
edit = "0.1.5"
futures-util = "0.3.30"
graphql_client = { workspace = true }
http = "0.2"                                                                   # reqwest use 0.2
http-serde-ext = "0.1"
open = "5.0.1"
palette = "0.7.3"
# Use latest api
ratatui = { git = "https://github.com/ratatui-org/ratatui.git", branch = "main"}
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.111"
synd = { path = "../synd" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }
url = { workspace = true }
