[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd backend api"
name        = "synd-api"
readme      = "README.md"
version     = "0.1.0"

[dependencies]
synd-feed = { path = "../synd_feed", version = "0.1.0" }
synd-o11y = { path = "../synd_o11y", version = "0.1.0" }

anyhow             = { workspace = true }
async-graphql      = { version = "7.0", features = ["tracing"] }
async-graphql-axum = { version = "7.0" }
async-trait        = { workspace = true }
axum               = { workspace = true }
axum-server        = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true, features = ["derive", "env"] }
feed-rs            = { workspace = true }
futures-util       = { workspace = true }
graphql_client     = { workspace = true }
headers            = { workspace = true }
kvsd               = { workspace = true }
moka               = { workspace = true, features = ["future"] }
pin-project        = "1.1.4"
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = "1.0.111"
supports-color     = { version = "3.0.0" }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower              = { version = "0.4.13", default_features = false, features = ["limit", "timeout"] }
tower-http         = { version = "0.5.1", default_features = false, features = ["trace", "sensitive-headers", "cors", "limit"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]

# Enable graphql introspection
introspection = []

[lints]
workspace = true
