[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd backend api"
name        = "synd-api"
readme      = "README.md"
version     = "0.1.9"

[[bin]]
name = "synd-api"
path = "src/main.rs"

[dependencies]
synd-auth = { path = "../synd_auth", version = "0.2.1" }
synd-feed = { path = "../synd_feed", version = "0.1.5" }
synd-o11y = { path = "../synd_o11y", version = "0.1.4" }

anyhow             = { workspace = true }
async-graphql      = { version = "7.0", features = ["tracing"] }
async-graphql-axum = { version = "7.0" }
async-trait        = { workspace = true }
axum               = { workspace = true }
axum-server        = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true, features = ["derive", "env"] }
fdlimit            = { workspace = true }
feed-rs            = { workspace = true }
futures-util       = { workspace = true }
graphql_client     = { workspace = true }
kvsd               = { workspace = true }
moka               = { workspace = true, features = ["future"] }
parse_duration     = { workspace = true }
pin-project        = "1.1.4"
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = "1.0.111"
supports-color     = { version = "3.0.0" }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-metrics      = { version = "0.3.1", default-features = false, features = ["rt", "tokio"] }
tower              = { version = "0.4.13", default_features = false, features = ["limit", "timeout"] }
tower-http         = { version = "0.5.1", default_features = false, features = ["trace", "sensitive-headers", "cors", "limit"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]

# Enable graphql introspection
introspection        = []
opentelemetry-stdout = ["synd-o11y/opentelemetry-stdout"]

[lints]
workspace = true

[package.metadata.dist]
# Currently, cargo-dist does not respect .cargo/config.toml at workspace toplevel
# this cause compile error dut to tokio-metrics which expect tokio-unstable is enabled
# https://github.com/axodotdev/cargo-dist/issues/513
dist = false
