[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd authentication lib"
name        = "synd-auth"
readme      = "README.md"
version     = "0.2.1"

[dependencies]
anyhow         = { workspace = true }
chrono         = { workspace = true }
http           = { workspace = true }
http-serde-ext = "0.1"
jsonwebtoken   = "9.3.0"
reqwest        = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["time"] }
tracing        = { workspace = true }

[lints]
workspace = true

[package.metadata.dist]
dist = false
