[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd authentication lib"
name        = "synd-auth"
readme      = "README.md"
version     = "0.2.4"

[dependencies]
anyhow         = { workspace = true }
chrono         = { workspace = true, features = ["now"] }
http           = { workspace = true }
http-serde-ext = "1.0.2"
jsonwebtoken   = { workspace = true }
reqwest        = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["time"] }
tracing        = { workspace = true }

[lints]
workspace = true

[package.metadata.dist]
dist = false
