[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd authentication lib"
name        = "synd-auth"
readme      = "README.md"
version     = "0.2.4"

[dependencies]
anyhow         = { workspace = true }
chrono         = { workspace = true, features = ["now"] }
http           = { workspace = true }
http-serde-ext = "1.0.2"
jsonwebtoken   = { workspace = true }
reqwest        = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["time"] }
tracing        = { workspace = true }

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-auth-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"

[package.metadata.dist]
dist = false
