[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
name                  = "synd_authn"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[dependencies]
anyhow         = { workspace = true }
http           = { workspace = true }
http-serde-ext = "0.1"
reqwest        = { workspace = true }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
tokio          = { workspace = true, features = ["time"] }
tracing        = { workspace = true }
