[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd authentication lib"
name        = "synd-authn"
readme      = "README.md"
version     = "0.1.0"

[dependencies]
anyhow         = { workspace = true }
http           = { workspace = true }
http-serde-ext = "0.1"
reqwest        = { workspace = true }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
tokio          = { workspace = true, features = ["time"] }
tracing        = { workspace = true }

[lints]
workspace = true
