[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "Library to handle syndication spec"
name        = "synd-feed"
readme      = "README.md"
version     = "0.3.2"

[dependencies]
synd-o11y = { path = "../synd_o11y", version = "0.1.7" }

anyhow        = { workspace = true }
async-graphql = { workspace = true, optional = true }
async-trait   = { workspace = true }
chrono        = { workspace = true }
fake          = { workspace = true, optional = true, features = ["derive"] }
feed-rs       = { workspace = true }
futures-util  = { workspace = true }
moka          = { workspace = true, features = ["future"] }
rand          = { workspace = true, optional = true }
reqwest       = { workspace = true, features = ["stream"] }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
tracing       = { workspace = true }
url           = { workspace = true, features = ["serde"] }

[features]
fake    = ["dep:fake", "dep:rand"]
graphql = ["dep:async-graphql"]

[lints]
workspace = true

[package.metadata.dist]
dist = false
