[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "Library to handle syndication spec"
name        = "synd-feed"
readme      = "README.md"
version     = "0.3.4"

[dependencies]
synd-o11y = { path = "../synd_o11y", version = "0.1.9" }

anyhow        = { workspace = true }
async-graphql = { workspace = true, optional = true }
async-trait   = { workspace = true }
chrono        = { workspace = true }
fake          = { workspace = true, optional = true, features = ["derive"] }
feed-rs       = { workspace = true }
futures-util  = { workspace = true }
moka          = { workspace = true, features = ["future"] }
rand          = { workspace = true, optional = true }
reqwest       = { workspace = true, features = ["stream"] }
schemars      = { workspace = true, optional = true, features = ["derive", "url"] }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["macros"] }
tokio-util    = { workspace = true }
tracing       = { workspace = true }
url           = { workspace = true, features = ["serde"] }

[features]
fake       = ["dep:fake", "dep:rand"]
graphql    = ["dep:async-graphql"]
jsonschema = ["dep:schemars"]

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-feed-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"

[package.metadata.dist]
dist = false
